--- a/1-GamesSalesAnalysis/GamesSalesAnalysis.ipynb
+++ b/1-GamesSalesAnalysis/GamesSalesAnalysis.ipynb
@@ -642,9 +642,9 @@
        "8.2     282\n",
        "8.3     254\n",
        "       ... \n",
-       "0.7       2\n",
-       "1.1       2\n",
+       "1.3       2\n",
        "9.6       2\n",
+       "0.7       2\n",
        "0         1\n",
        "9.7       1\n",
        "Name: user_score, Length: 96, dtype: int64"
@@ -870,9 +870,9 @@
        "8.3    254\n",
        "8.5    253\n",
        "      ... \n",
-       "0.7      2\n",
-       "0.5      2\n",
+       "1.3      2\n",
        "9.6      2\n",
+       "0.7      2\n",
        "0        1\n",
        "9.7      1\n",
        "Name: user_score, Length: 95, dtype: int64"
@@ -978,100 +978,100 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3081</th>\n",
-       "      <td>LEGO Harry Potter: Years 5-7</td>\n",
-       "      <td>DS</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>E10+</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4270</th>\n",
-       "      <td>Brothers In Arms: D-Day</td>\n",
-       "      <td>PSP</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>Shooter</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>9.1</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10130</th>\n",
-       "      <td>BlazBlue: Calamity Trigger Portable</td>\n",
+       "      <th>5956</th>\n",
+       "      <td>Kurohyou: Ryu ga Gotoku Shinshou</td>\n",
        "      <td>PSP</td>\n",
        "      <td>2010.0</td>\n",
-       "      <td>Fighting</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>T</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10547</th>\n",
-       "      <td>Creeper World 3: Arc Eternal</td>\n",
-       "      <td>Wii</td>\n",
-       "      <td>2009.0</td>\n",
+       "      <th>14142</th>\n",
+       "      <td>FabStyle</td>\n",
+       "      <td>3DS</td>\n",
+       "      <td>2011.0</td>\n",
        "      <td>Strategy</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.10</td>\n",
+       "      <td>0.03</td>\n",
        "      <td>0.00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15623</th>\n",
-       "      <td>Winter Blast: 9 Snow &amp; Ice Games</td>\n",
-       "      <td>Wii</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>Sports</td>\n",
+       "      <th>15986</th>\n",
+       "      <td>Hiiro no Kakera Portable</td>\n",
+       "      <td>PSP</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.02</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14185</th>\n",
+       "      <td>Need for Speed (2015)</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>Racing</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.03</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6731</th>\n",
+       "      <td>SBK Superbike World Championship</td>\n",
+       "      <td>PS3</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>Racing</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>E10+</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      name platform  year_of_release  \\\n",
-       "3081          LEGO Harry Potter: Years 5-7       DS              NaN   \n",
-       "4270               Brothers In Arms: D-Day      PSP           2006.0   \n",
-       "10130  BlazBlue: Calamity Trigger Portable      PSP           2010.0   \n",
-       "10547         Creeper World 3: Arc Eternal      Wii           2009.0   \n",
-       "15623     Winter Blast: 9 Snow & Ice Games      Wii           2010.0   \n",
+       "                                   name platform  year_of_release      genre  \\\n",
+       "5956   Kurohyou: Ryu ga Gotoku Shinshou      PSP           2010.0  Adventure   \n",
+       "14142                          FabStyle      3DS           2011.0   Strategy   \n",
+       "15986          Hiiro no Kakera Portable      PSP           2008.0  Adventure   \n",
+       "14185             Need for Speed (2015)       PC           2016.0     Racing   \n",
+       "6731   SBK Superbike World Championship      PS3           2008.0     Racing   \n",
        "\n",
-       "          genre  na_sales  eu_sales  jp_sales  other_sales  critic_score  \\\n",
-       "3081     Action      0.34      0.25      0.00         0.07          69.0   \n",
-       "4270    Shooter      0.23      0.14      0.00         0.09          65.0   \n",
-       "10130  Fighting      0.07      0.01      0.03         0.01          82.0   \n",
-       "10547  Strategy      0.00      0.00      0.10         0.00           NaN   \n",
-       "15623    Sports      0.02      0.00      0.00         0.00           NaN   \n",
+       "       na_sales  eu_sales  jp_sales  other_sales  critic_score  user_score  \\\n",
+       "5956       0.00      0.00      0.29         0.00           NaN         NaN   \n",
+       "14142      0.00      0.00      0.03         0.00           NaN         NaN   \n",
+       "15986      0.00      0.00      0.02         0.00           NaN         NaN   \n",
+       "14185      0.00      0.03      0.00         0.00           NaN         NaN   \n",
+       "6731       0.12      0.11      0.00         0.02          59.0         6.1   \n",
        "\n",
-       "       user_score rating  \n",
-       "3081          NaN   E10+  \n",
-       "4270          9.1      M  \n",
-       "10130         7.8      T  \n",
-       "10547         NaN    NaN  \n",
-       "15623         NaN    NaN  "
+       "      rating  \n",
+       "5956     NaN  \n",
+       "14142    NaN  \n",
+       "15986    NaN  \n",
+       "14185    NaN  \n",
+       "6731    E10+  "
       ]
      },
      "execution_count": 17,
@@ -3948,19 +3948,6 @@
    ],
    "source": [
     "ps3_games['critic_score'].corr(ps3_games['user_score'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "<b>Комментарий ревьюера:</b>\n",
-    "    \n",
-    "В том числе мы можем посчитать корреляцию между нужными нам переменными и использовать метод `heatmap` из библиотеки `seaborn` для визуализации тепловой карты. \n",
-    "    \n",
-    "    \n",
-    "</div>"
    ]
   },
   {
