--- a/1-GamesSalesAnalysis/GamesSalesAnalysis.ipynb
+++ b/1-GamesSalesAnalysis/GamesSalesAnalysis.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# workaround to use praktikum file system as well as local windows system\\n\",\n",
+    "# workaround to use praktikum file system as well as local windows system\",\n",
     "try:\n",
     "    games = pd.read_csv(\"/datasets/games.csv\")\n",
     "except:\n",
