--- a/3-ABtestingAnalysis/ABtestingAnalysis.ipynb
+++ b/3-ABtestingAnalysis/ABtestingAnalysis.ipynb
@@ -2797,8 +2797,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_users_a = orders[orders['group']=='A'].groupby('visitorId')['transactionId'].nunique().reset_index()\n",
-    "orders_users_b = orders[orders['group']=='B'].groupby('visitorId')['transactionId'].nunique().reset_index()"
+    "orders_users_a = orders[orders['group']=='A'].groupby('visitorId')['transactionId'] \\\n",
+    "                                            .nunique().reset_index()\n",
+    "orders_users_b = orders[orders['group']=='B'].groupby('visitorId')['transactionId'] \\\n",
+    "                                            .nunique().reset_index()"
    ]
   },
   {
@@ -3928,7 +3930,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users_many_orders = pd.concat([orders_users_a.query('transactionId > 2')['visitorId'], orders_users_b.query('transactionId > 2')['visitorId']], axis=0)"
+    "users_many_orders = pd.concat([orders_users_a.query('transactionId > 2')['visitorId'],\n",
+    "                               orders_users_b.query('transactionId > 2')['visitorId']],\n",
+    "                                axis=0)"
    ]
   },
   {
@@ -4086,7 +4090,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zeros_a_filtered = pd.DataFrame(0, index=np.arange(visitors_a - len(orders_users_a_filtered['transactionId'])), columns=['transactionId'])"
+    "zeros_a_filtered = pd.DataFrame(0, index=np.arange(visitors_a - len(orders_users_a_filtered['transactionId'])),\n",
+    "                                columns=['transactionId'])"
    ]
   },
   {
@@ -4095,7 +4100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zeros_b_filtered = pd.DataFrame(0, index=np.arange(visitors_b - len(orders_users_b_filtered['transactionId'])), columns=['transactionId'])"
+    "zeros_b_filtered = pd.DataFrame(0, index=np.arange(visitors_b - len(orders_users_b_filtered['transactionId'])),\n",
+    "                                columns=['transactionId'])"
    ]
   },
   {
@@ -4463,13 +4469,6 @@
    "source": [
     "Как видно по графику и общей выручке за месяц, несмотря на незначительную разницу в средних чеках, увеличенная конверсия сегмента В дала большой прирост в общей выручке за время А/В теста. **В сумме сегмент В заработал почти на 400 тыс. больше (14%), чем сегмент А**. Этот факт позволяет заявить об успешности А/В теста и выигрыше группы В по основной целе исследования, направленной на увеличение общей выручки."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
